--- a/hello/Makefile
+++ b/hello/Makefile
@@ -1,6 +1,6 @@
 build:
 	GOOS=wasip1 GOARCH=wasm go build -o build.out -v main.go 
 run: build
-	wasmtime run --mapdir $(PWD)::. build.out
+	wasmedge run --dir /:$(PWD):readwrite -- build.out
 test: build 
-	wasmtime run build.out
+	wasmedge run build.out
